# M3DS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
gfx/: SkyBox Attribution.txt
include/m3ds/: M3DS.hpp
include/m3ds/containers/: HeapArray.hpp  ScratchBuffer.hpp  StaticHeapArray.hpp  StrongOptional.hpp  UninitialisedStorage.hpp
include/m3ds/nodes/: AnimationPlayer.hpp  AudioPlayer.hpp  CanvasItem.hpp  CanvasLayer.hpp  Node.hpp  Root.hpp  Timer.hpp  Tween.hpp  Viewport.hpp
include/m3ds/reference/: Object.hpp  Resource.hpp  Script.hpp
include/m3ds/render/: DVLB.hpp  Light.hpp  LightEnvironment.hpp  Mesh.hpp  Mesh2D.hpp  RenderTarget.hpp  ShaderProgram.hpp  SpriteSheet.hpp  Style.hpp  Texture.hpp  WorldEnvironment3D.hpp
include/m3ds/spatial/: Arithmetic.hpp  Matrix4x4.hpp  Quaternion.hpp  Transform2D.hpp  Vector2.hpp  Vector3.hpp
include/m3ds/types/: Colour.hpp  Error.hpp  ErrorCode.hpp  Failure.hpp  Float16.hpp  InputFrame.hpp  Margin.hpp  NodePath.hpp  Notification.hpp  Signal.hpp  Style.hpp  TypePack.hpp
include/m3ds/utils/: BinaryFile.hpp  Debug.hpp  Frame.hpp  FrameTimer.hpp  Input.hpp  Interpolate.hpp  LinearAllocator.hpp  Memory.hpp  ObjectPack.hpp  Path.hpp  Pedometer.hpp  RawImage.hpp  Serialiser.hpp  Texture.hpp  Units.hpp  Visitor.hpp  WAV.hpp
source/: 2dshader.v.pica  M3DS.cpp  vshader.v.pica
source/nodes/: AnimationPlayer.cpp  AudioPlayer.cpp  CanvasItem.cpp  CanvasLayer.cpp  Node.cpp  Root.cpp  Timer.cpp  Tween.cpp  Viewport.cpp
source/nodes/2d/: Area2D.cpp  Camera2D.cpp  CollisionObject2D.cpp  (+6 more)
source/reference/: Object.cpp  Resource.cpp
source/render/: LightEnvironment.cpp  Mesh.cpp  RenderTarget.cpp  ShaderProgram.cpp  SpriteSheet.cpp  Style.cpp  Texture.cpp  WorldEnvironment3D.cpp
source/types/: Style.cpp
source/utils/: Frame.cpp  Input.cpp  Pedometer.cpp  RawImage.cpp  Texture.cpp  WAV.cpp
(+116 files in other folders)
